# Mir-govorit

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  env.example  pyproject.toml
api/: admin.py  exceptions.py  models.py  service.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_recipeproduct_product_weight.py  0003_alter_product_created_at_alter_product_updated_at_and_more.py  0004_alter_recipeproduct_product_id.py
api/templates/: base.html  recipes.html
core/: settings.py  urls.py
fixtures/: products.json  recipe_product.json  recipes.json  users.json
nginx/: nginx.conf
